[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0", features=["derive"]}
anyhow = "1.0"
smallvec = {version="1.0", features=["const_generics"]}
itertools = "0.10"
maplit = "1.0"
